<resources>
    <string name="app_name">Дневник снов</string>
    <string name="my_dreams">Мои сны</string>
    <string name="dream_means">Толкование</string>
    <string name="setting">Настройки</string>
    <string name="exit_to_app">Закрыть приложение</string>

    <integer name="rec_pad">1</integer>

    <!-- Фрагмент записи -->
    <string name="name_dream">Название:</string>
    <string name="cont_dream">Содержание сна</string>


    <!-- Пункты меню-->
    <string name="menu_sort">Сортировка</string>
    <string name="menu_sort_datenew">По дате (новый в начале)</string>
    <string name="menu_sort_dateold">По дате (старый в начале)</string>
    <string name="menu_sort_name">По алфавиту названия</string>

    <!-- Фрагмент записи -->

    <integer name="number_item">3</integer>
    <string name="search_hint">Поиск</string>
    <string name="search">Search</string>
    <string name="information">
        " Дневник сновидений поможет сделать ваши сны осознанными. По мере развития практики запоминания снов,"
        "вы будете помнить все больше и больше деталей. Ваши воспоминания из обрывочных и коротких превратятся в длинные истории.\n"
        " Дневник сновидений используют лишь для записи снов и выявления признаков сновидения. Но дневник действительно помогает осознавать сны.\n
          В Дневнике снов добавлено и немного эзотерики. Вполне вероятно что некоторые детали вашего сна имеют
        толкования, подсказывающие о вашем настоящем или ближайшем будущем. Но это лишь предупреждения, а не неотвратимость!"
        " Как говорится: "Кто предупрежден, тот вооружен!\n"
        " В разделе толкования снов взят всемирно известный словарь Г.Миллера.\n"
        " Сонник Миллера — один из самых полных и точных сонников в мире."
        " Его автор — американский предприниматель и психолог <b>Густав Миллер</b>, живший в конце 19 — начале 20 веков."
        " Составляя свой толкователь, Миллер основывался на анализе собственных снов, а также старинных трудов по эзотерике и психологии.\n"
        " Сонник не только даст Вам толкование каждого конкретного сна, но и позволит проникнуть в саму суть сновидений.
        С его помощью Вы найдете ответы на все волнующие Вас вопросы. Научитесь принимать правильные решения в самых сложных
        ситуациях и лучше разбираться в людях, распознавая их истинные намерения. Ведь человек, понимающий и не боящийся
        своих снов, чувствует себя гораздо увереннее и в реальной жизни."
        ""
        ""
        ""
        ""
        "Developed by Domnin Dm.Ser."
        "Design by Korovin Ser.Ser."
    </string>

    <string name="ourdata">
        "Designed by Korovin S.\n"
        "Developed by Domnin D."
    </string>

    <!-- Preference Titles -->
    <string name="messages_header">Персональные данные</string>
    <string name="sync_header">Настройки приложения</string>

    <string-array name="genders">
        <item>Не задан</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Ваш пол (не обязательно)</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Темная тема</string>

    <string name="save">Сохранить</string>
    <string name="name_note">Введите название</string>
    <string name="date_note">Введите дату</string>

    <!-- Переходы  -->
    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_circle">transition:CIRCLE</string>
    <string name="transition_name_phone">transition:PHONE</string>
    <string name="title_activity_splash">Splash</string>

    <!-- Текст подсказок экрана загрузки  -->
    <string name="head_start">Первый запуск приложения:</string>
    <string name="prompt_1">
        " Проведите пальцем влево по записи для того, чтобы  удалить или отредактировать её…
    </string>
    <string name="prompt_2">
        " Рекомендуем перепроверить слово по его корню на наличие толкования из нашего справочника."
    </string>
    <string name="prompt_3">
        " Если в описании вашего сна слово выделено, значит оно имеет толкование по соннику. Просто нажмите на него."
    </string>
    <string name="prompt_4">
        " Для выхода из приложения нажмите кнопку \"Настройки\" и выберите соответствующий пункт."
    </string>

    <!-- Подписи для элементов -->
    <string name="labels">Метки</string>
    <string name="contents">Содержание сна</string>
    <string name="date">Дата</string>
    <string name="streamline">Упорядочить</string>
    <string name="record">Запись..</string>
    <string name="date_record">Дата записи</string>
    <string name="word">Слово</string>
    <string name="simbol_perc">%</string>
    <string name="disc_back">Назад</string>
    <string name="disc_choise_date">Выбор даты</string>
    <string name="disc_del_note">Удаление записи</string>
    <string name="disc_del_note_bottom">Удалить запись</string>
    <string name="disc_edit_note">Править запись</string>
    <string name="disc_edit_note_bottom">Изменить запись</string>
    <string name="disc_new_record">Записать новый сон</string>
    <string name="disc_search_note">Поиск по записям</string>
    <string name="disc_search_means">Поиск по справочнику</string>
    <string name="disc_dream_note">Что вам приснилось</string>
    <string name="disc_edit_dream">Редакирование содержания сна</string>
    <string name="disc_name_inter">Введите название записи</string>
    <string name="disc_rename">Изменить название сна</string>
    <string name="disc_gotodreams">Перейти к записям снов</string>
    <string name="disc_gotomeans">Перейти в справочник толкований</string>
    <string name="disc_gotosettings">Перейти в настройки</string>

</resources>