<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_recording"
        tools:ignore="ContentDescription"
        tools:context=".RecordingFragment">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_exit"
            style="@style/MyButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_save"
            style="@style/MyButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/linearLayout"
                  app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginTop="60dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="@dimen/height_view"
                      android:orientation="horizontal"
                      android:baselineAligned="false">


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="@drawable/ramka_top"
                          android:layout_weight="0.5">


                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           style="@style/IcoRecordStyle"
                           android:src="@drawable/ic_aa"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/name_note_et"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:autofillHints="@string/name_note"
                        android:hint="@string/name_note"
                        android:contentDescription="@string/disc_edit_name_dream"
                        style="@style/TextEditStyle"
                        android:backgroundTint="@android:color/transparent"
                        tools:ignore="SpUsage"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="@drawable/ramka_top"
                          android:layout_weight="0.5">

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           style="@style/IcoRecordStyle"
                           android:src="@drawable/ic_calendar"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/date_note_edit"
                        style="@style/TextRecordEditStyle"
                        android:clickable="true"
                        android:backgroundTint="@android:color/transparent"
                        tools:ignore="SpUsage,TextFields"
                        android:focusable="true"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="@dimen/height_view"
                      android:background="@drawable/ramka_bottom"
                      android:orientation="horizontal"
        >

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       style="@style/IcoRecordStyle"
                       android:src="@drawable/ic_label"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/label_edit_et"
                    android:inputType="text"
                    android:maxLines="1"
                    android:autofillHints="@string/labels"
                    android:hint="@string/labels"
                    style="@style/TextEditStyle"
                    android:backgroundTint="@android:color/transparent"
                    tools:ignore="SpUsage"/>
        </LinearLayout>

    </LinearLayout>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scroll_edit"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="152dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp">

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/record_edit_et"
                  android:gravity="start"
                  android:background="@null"
                  android:layout_gravity="center_horizontal"
                  android:autofillHints="@string/contents"
                  android:hint="@string/contents"
                  android:contentDescription="@string/disc_edit_dream"
                  android:textSize="@dimen/sizeText"
                  android:inputType="textCapSentences|textMultiLine"
        />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
